# newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrate  README.md  docker-compose.yml  fly.toml
configuration/: base.yaml
k8s/minikube/: clickstack.yaml  kustomization.yaml  logs-collector.yaml  migrate-job.yaml  networkpolicy.yaml  newsletter.yaml  otel-collectors.yaml  postgres.yaml
k8s/operators/cloudnative-pg/: kustomization.yaml
k8s/production/: clickstack-otel-secret.yaml  db-app-secret.yaml  kustomization.yaml  logs-collector.yaml  migrate-job.yaml  networkpolicy.yaml  newsletter.yaml  otel-collectors.yaml  postgres-cluster.yaml
scripts/: init_db.sh  minikube_down.sh  minikube_up.sh  set_hyperdx_key.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
